feat: configure social preview banner

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonho da Festa - Cursos e Workshops</title>
+    <meta name="description" content="Transforme seu talento em confeitaria com os cursos e workshops profissionais do Centro Culinário Sonho da Festa." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://eusoumanoelnetto.github.io/centro-culinario-sonhodafesta/" />
+    <meta property="og:title" content="Sonho da Festa - Cursos e Workshops" />
+    <meta property="og:description" content="Transforme seu talento em confeitaria com os cursos e workshops profissionais do Centro Culinário Sonho da Festa." />
+    <meta property="og:image" content="https://eusoumanoelnetto.github.io/centro-culinario-sonhodafesta/assets/banner.png" />
+    <meta property="og:image:alt" content="Banner promocional do Centro Culinário Sonho da Festa" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sonho da Festa - Cursos e Workshops" />
+    <meta name="twitter:description" content="Transforme seu talento em confeitaria com os cursos e workshops profissionais do Centro Culinário Sonho da Festa." />
+    <meta name="twitter:image" content="https://eusoumanoelnetto.github.io/centro-culinario-sonhodafesta/assets/banner.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
