--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Quicksand:wght@300;400;500;600;700&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/assets/favicon.png">
     <link rel="apple-touch-icon" href="/assets/favicon.png">
+    <!-- Preload principal hero image para melhorar tempo de pintura inicial -->
+    <link rel="preload" as="image" href="https://i.imgur.com/u7804Ci.jpeg">
     <style>
         body {
             font-family: 'Quicksand', sans-serif;
