--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link rel="apple-touch-icon" href="/assets/favicon.png">
     <!-- Preload principal hero image para melhorar tempo de pintura inicial -->
     <link rel="preload" as="image" href="https://i.imgur.com/u7804Ci.jpeg">
+    <!-- Preconnect para acelerar carregamento de imagens hospedadas no Imgur -->
+    <link rel="preconnect" href="https://i.imgur.com">
     <style>
         body {
             font-family: 'Quicksand', sans-serif;
